# Triton

./: .appveyor.yml  .travis.yml  CMakeLists.txt  Doxyfile  appveyor.yml
src/: CMakeLists.txt
src/examples/cpp/: CMakeLists.txt
src/examples/pin/: crackme_hash_collision.py
src/examples/python/: constraints.py  hooking_libc.py  small_x86-64_symbolic_emulator.py
src/examples/python/ctf-writeups/defcamp-2015-r100/: solve.py
src/examples/python/ctf-writeups/hackover-ctf-2015-r150/: solve.py
src/libtriton/: CMakeLists.txt
src/libtriton/api/: api.cpp
src/libtriton/arch/: architecture.cpp  instruction.cpp  memoryAccess.cpp  register.cpp  registerSpecification.cpp
src/libtriton/arch/x86/: x8664Cpu.cpp  x86Cpu.cpp  x86Semantics.cpp  x86Specifications.cpp
src/libtriton/ast/: ast.cpp  astContext.cpp  astDictionaries.cpp  astGarbageCollector.cpp
src/libtriton/ast/representations/: astPythonRepresentation.cpp  astRepresentation.cpp  astSmtRepresentation.cpp
src/libtriton/ast/z3/: tritonToZ3Ast.cpp  z3Interface.cpp  z3ToTritonAst.cpp
src/libtriton/bindings/python/: init.cpp
src/libtriton/bindings/python/modules/: tritonCallbacks.cpp
src/libtriton/bindings/python/namespaces/: initSyscallNamespace.cpp
src/libtriton/bindings/python/objects/: pyAstContext.cpp  pyAstNode.cpp  pyRegister.cpp  pySymbolicVariable.cpp  pyTritonContext.cpp
src/libtriton/callbacks/: callbacks.cpp
src/libtriton/engines/solver/: solverEngine.cpp
src/libtriton/engines/symbolic/: pathConstraint.cpp  pathManager.cpp  symbolicEngine.cpp  symbolicExpression.cpp  symbolicSimplification.cpp  symbolicValue.cpp  symbolicVariable.cpp
src/libtriton/engines/taint/: taintEngine.cpp
src/libtriton/includes/: api.hpp  ast.hpp  astGarbageCollector.hpp  memoryAccess.hpp
src/libtriton/includes/triton/: api.hpp  architecture.hpp  ast.hpp  astContext.hpp  astGarbageCollector.hpp  astPythonRepresentation.hpp  astRepresentation.hpp  astSmtRepresentation.hpp  astVisitor.hpp  callbacks.hpp  memoryAccess.hpp  pythonObjects.hpp  register.hpp  symbolicEngine.hpp  symbolicExpression.hpp  symbolicValue.hpp  symbolicVariable.hpp  syscalls.hpp  tritonToZ3Ast.hpp  unix.hpp  version.hpp
src/libtriton/os/unix/: syscallNumberToString.cpp
src/libtritonast/: nodes.cpp
src/libtritonast/include/tritonast/: nodes.hpp
src/libtritonast/solvers/z3/: solver.cpp
src/scripts/: extract_syscall.py  setup.py
src/testers/: CMakeLists.txt
src/testers/unittests/: test_ast_conversion.py  test_ast_duplication.py  test_ast_eval.py  test_ast_representation.py  test_semantics.py  test_simulation.py
src/tracer/: CMakeLists.txt
src/tracer/pin/: context.cpp
